2017-11-22  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Chain cases in AbsWordSeg::CreateWordList() together.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Chain chunk type cases into a single if-else-statement,
	    instead of several if-statements with 'continue' at the end,
	    to clarify the classification checks.

2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Make WordSeg() internal functions private.

	* src/abswordseg.h:
	  - Move CreateWordList(), ReverseLinkSep(), CreateSentence(),
	    GetBestSen() methods from protected to private.

2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Rename AbsWordSeg::SwapLinkSep() to ReverseLinkSep().

	* src/abswordseg.h, src/abswordseg.cpp:
	  - Rename AbsWordSeg::SwapLinkSep() to ReverseLinkSep().

2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove empty default c-tors.

	* src/longwordseg.h, src/longwordseg.cpp:
	* src/maxwordseg.h, src/maxwordseg.cpp:
	  - Remove empty default c-tors for LongWordSeg & MaxWordSeg.

2017-11-20  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify loop in MaxWordSeg::WordSegArea().

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea()):
	  - Rearrange loop for more readability.
	  - With this, foundUnk flag is eliminated.

2017-11-17  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Adjust MaxWordSeg::CreateSentence().

	* src/maxwordseg.cpp (MaxWordSeg::CreateSentence()):
	  - Assign stWord = i + 1 after unknown zone, to resemble
	    the case of in-dict word (where stWord is assigned 1, not 0).
	    Then, the later for-loop on stWord won't need to check and
	    increment stWord the first time, as we already know
	    LinkSep[IdxSep[stWord]] == enAmb, and the if-condition
	    within the for-loop will always fail in the first round.
	  - Drop unnecessary (stWord < textLen) check, as enAmb is assumed
	    to never exceed textLen, and thus (stWord < enAmb) should
	    alreader imply (stWord < textLen).